<resources>
    <string name="app_name">RoleGame</string>
    <string name="loading">Loading…</string>
    <string name="register">Register</string>
    <string name="play_as_guest">Play As Guest</string>
    <string name="log_in">log in</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="guide">Guide</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="random_roles">Random Roles</string>
    <string name="description">description</string>
    <string name="role_mechanics">Role Mechanics</string>
    <string name="flip_the_card_to_reveal_your_role">Flip the card to reveal your role</string>
    <string name="flip">Flip</string>
    <string name="finish_turn">finish turn</string>
    <string name="edit">Edit Role</string>
    <string name="skip_turn">skip turn</string>
</resources>