<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PreMain">

    <TextView
        android:id="@+id/gameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="55dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="65sp"
        android:textStyle="bold"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/b_type_1"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/guest_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName"
        app:layout_constraintVertical_bias="0.7"
        style="@style/PreMainButtons" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/b_type_1"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/guest_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName"
        app:layout_constraintVertical_bias="0.7"
        style="@style/PreMainButtons" />

    <Button
        android:id="@+id/guest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/b_type_2"
        android:paddingLeft="10dp"
        android:paddingTop="25dp"
        android:paddingRight="10dp"
        android:paddingBottom="25dp"
        android:text="@string/play_as_guest"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

</androidx.constraintlayout.widget.ConstraintLayout>