<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="45dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@drawable/b_type_3"
        android:text="@string/play"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--
        <Button
            android:id="@+id/settings_button"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/b_type_4"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="@+id/guide_button"
            app:layout_constraintStart_toStartOf="@+id/guide_button"
            app:layout_constraintTop_toBottomOf="@+id/guide_button"  />
    -->
    <Button
        android:id="@+id/guide_button"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/guide"
        android:background="@drawable/b_type_4"
        app:layout_constraintEnd_toEndOf="@+id/play_button"
        app:layout_constraintStart_toStartOf="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />


</androidx.constraintlayout.widget.ConstraintLayout>